--- a/index.html
+++ b/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>Herbalife Coach Alyssa</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
+
   <body>
-    <div>
-      <h1>Are You Ready To Make A Difference?</h1>
+  <header>
+  	<img src="http://logonoid.com/images/herbalife-logo.png">
+  	<p></p>
+  </header>
+
+    <div class="intro">
+    <h1>Alyssa Gilday: Herbalife Coach</h1>
+    <h3>Are You Ready To Make A Difference?</h3>
     </div>
-    <div>
+
+    <div class="clients">
       <h2>Meet My Clients</h2>
     </div>
+
+    <footer>
+    <div class="footer">
+
+      <div id="fbbutton">
+    	<a href="https://www.facebook.com/gilday.alyssa">
+    	<p id="fbtext">Find me on <span id="facebook">Facebook!</span></p>
+    	</a>
+      </div>
+
+    	<a href="mailto:coachwifeyyyy0120@gmail.com">
+    	<p id="email"> Email Me!</p>
+    	</a>
+
+    	<a href="https://www.instagram.com/alyssa.gilday/">
+    	<p id="igbutton">Add me on <span id="instagram">Instagram</span></p>
+    	</a>
+    </div>
+    </footer>
   </body>
+
 </html>
