--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Herbalife Coach Alyssa</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="herbalifemain.css"/>
   </head>
 
   <body>
